fixed alignment of icons and button on admin dashboard page

--- a/css/style.css
+++ b/css/style.css
@@ -70,6 +70,10 @@ a {
   color: #7986cb;
 }
 
+.td {
+  width: 20%;
+}
+
 @media (min-width: 992px) {
   .one-snack-container {
     margin-top: 3em;
